[gd_scene load_steps=11 format=3 uid="uid://d1wtnf64signc"]

[ext_resource type="Texture2D" uid="uid://fmtaxqrf5efm" path="res://Sprites/SwampLevel1/Tree_path_3/Tree.png" id="1_8ldg8"]
[ext_resource type="Script" path="res://Scene/Swamp_Level_1/3p_Tree/3p_tree.gd" id="1_nub2f"]
[ext_resource type="Texture2D" uid="uid://dm5um4l8n1q3b" path="res://Sprites/SwampLevel1/Tree_path_3/Shadow_tree.png" id="2_n7q8q"]
[ext_resource type="PackedScene" uid="uid://c2kqghwfv7ic6" path="res://Scene/Items/MushroomPlatforms/mushroom_platform_1.tscn" id="3_upsp1"]
[ext_resource type="PackedScene" uid="uid://chyesytskvshb" path="res://Scene/Items/MushroomPlatforms/mushroom_platform_3.tscn" id="4_oukok"]
[ext_resource type="PackedScene" uid="uid://c4xsev3wvng7w" path="res://Scene/Items/MushroomPlatforms/mushroom_platform_2.tscn" id="5_ea1x3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_betml"]
size = Vector2(74.5428, 962.239)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqjpp"]
size = Vector2(74.5428, 845.168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qree1"]
size = Vector2(2083, 1171)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dydy8"]
size = Vector2(202.805, 184.675)

[node name="3p_Tree" type="StaticBody2D" groups=["Tree_level_1"]]
collision_mask = 2
script = ExtResource("1_nub2f")

[node name="3p_Tree_sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_8ldg8")

[node name="ShadowTree" type="Sprite2D" parent="3p_Tree_sprite"]
modulate = Color(1, 1, 1, 0.490196)
show_behind_parent = true
position = Vector2(-71, 800)
texture = ExtResource("2_n7q8q")

[node name="MushroomPlatform_1" parent="." instance=ExtResource("3_upsp1")]
position = Vector2(-229, 728)

[node name="MushroomPlatform_3" parent="." instance=ExtResource("4_oukok")]
position = Vector2(26, 541)
rotation = 0.106204

[node name="MushroomPlatform_2" parent="." instance=ExtResource("5_ea1x3")]
position = Vector2(-219, 361)

[node name="MushroomPlatform_4" parent="." instance=ExtResource("3_upsp1")]
position = Vector2(-202, 158)

[node name="mushroom" parent="MushroomPlatform_4" index="0"]
position = Vector2(-12, 1)
rotation = -0.118318
flip_h = true

[node name="MushroomPlatform_5" parent="." instance=ExtResource("5_ea1x3")]
position = Vector2(60, -48)
rotation = -0.0898096

[node name="MushroomPlatform_6" parent="." instance=ExtResource("4_oukok")]
position = Vector2(-220, -219)
rotation = 0.55516

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-804.944, -296.563)
rotation = -1.43123
shape = SubResource("RectangleShape2D_betml")
debug_color = Color(0.423359, 0.226436, 0.0938379, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(-825.763, -588.914)
rotation = 0.962956
shape = SubResource("RectangleShape2D_kqjpp")
debug_color = Color(0.423359, 0.226436, 0.0938379, 0.42)

[node name="Camera_player" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera_player"]
position = Vector2(0.5, -461.5)
shape = SubResource("RectangleShape2D_qree1")
debug_color = Color(0.262745, 0.490196, 0.247059, 0.419608)

[node name="Jump_player_off" type="Area2D" parent="."]
unique_name_in_owner = true
collision_mask = 2
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Jump_player_off"]
position = Vector2(-211.318, -336.883)
rotation = 0.130907
shape = SubResource("RectangleShape2D_dydy8")
debug_color = Color(0.767747, 0.427015, 0.361579, 0.42)

[connection signal="body_entered" from="Camera_player" to="." method="_on_camera_player_body_entered"]
[connection signal="body_exited" from="Camera_player" to="." method="_on_camera_player_body_exited"]
[connection signal="body_entered" from="Jump_player_off" to="." method="_on_jump_player_off_body_entered"]
[connection signal="body_exited" from="Jump_player_off" to="." method="_on_jump_player_off_body_exited"]

[editable path="MushroomPlatform_4"]
